metadata/1.0.7/fr.md
# Claud CO2 — App Store Connect Metadata

**Version:** 1.0.7  
**Locale:** French  
**Locale code:** `fr`

---

## App Information

| Field | Value | Limit | Count |
|---|---|---|---|
| **Name** | Claud CO2 | 30 | 9 |
| **Subtitle** | Suivez votre empreinte carbone | 30 | 30 |
| **Promotional Text** | Découvrez Claud — votre mascotte nuage qui réagit à votre score CO₂. Enregistrez vos activités, planifiez des trajets plus verts et recevez des conseils météo. | 170 | 135 |

---

## Keywords

```
carbone,CO2,climat,durabilité,écolo,transport,santé,météo,conseils,empreinte,environnement
```

**Limit:** 100 characters · **Count:** 86

---

## Description

Claud CO2 vous aide à comprendre et réduire votre empreinte carbone personnelle — jour après jour.

Enregistrez les activités qui comptent : conduite, vols, transports en commun, alimentation, énergie domestique, marche, vélo, plantation d'arbres et recyclage. Visualisez votre consommation et compensation de CO₂ sur la semaine avec des graphiques clairs.

**Découvrez Claud, votre mascotte carbone**  
Claud est un nuage amical qui reflète votre santé CO₂ hebdomadaire. Faites des choix plus verts et regardez Claud s'épanouir.

**Planifiez des trajets plus écologiques**  
Comparez les options de transport sur la carte intégrée. Les itinéraires sont classés par impact CO₂ — l'option la plus verte est toujours en premier. Enregistrez vos trajets directement dans votre journal d'activités.

**Synchronisation avec Apple Health**  
Importez automatiquement le nombre de pas et la distance marche/course depuis HealthKit. Transformez vos déplacements quotidiens en compensation enregistrée sans effort supplémentaire.

**Suggestions météo intelligentes**  
Claud vérifie la météo et la qualité de l'air local pour vous encourager à marcher ou faire du vélo quand les conditions sont favorables — et vous avertir quand l'activité extérieure est déconseillée.

**Conseils intelligents basés sur vos données**  
Obtenez des analyses personnalisées : tendances d'utilisation, principaux émetteurs, écarts de compensation, alternatives alimentaires et options plus vertes avec de vrais chiffres en kg CO₂.

**Suivez les tendances**  
Tendances hebdomadaires, répartition consommation vs. compensation et activités les plus utilisées vous aident à repérer les habitudes et progresser.

Les abonnements et forfaits à vie débloquent l'expérience complète Claud CO2. Commencez dès aujourd'hui votre transition vers un mode de vie plus vert.

---

## What's New in This Version

**Version 1.0.7**

- Découvrez votre nouvelle mascotte — Claud réagit maintenant à votre score CO₂ en temps réel
- Conseils météo — Claud vérifie les conditions locales pour suggérer le meilleur moment pour marcher, faire du vélo ou prendre les transports
- Conseils d'activité plus intelligents — analyses basées sur vos données avec de vrais chiffres de CO₂, tendances d'utilisation et suggestions concrètes
- Une expérience plus claire et rapide — cartes redessinées, navigation plus fluide et mise en page plus intuitive
- Nouvelle expérience Cartes — planifiez des trajets plus écologiques avec comparaison des transports en direct et estimations CO₂ sur la carte

---

## URLs

| Field | URL |
|---|---|
| **Support URL** | `https://giusscos.com/trackco2/support` |
| **Marketing URL** | `https://giusscos.com/trackco2` |
| **Privacy Policy URL** | `https://giusscos.com/trackco2/privacy` |

---

## Categories

| | Category |
|---|---|
| **Primary** | Health & Fitness |
| **Secondary** | Lifestyle |

---

## In-App Purchases & Subscriptions

À copier dans App Store Connect → Abonnements / Achats intégrés → [produit] → [langue].

### Groupe d'abonnements : Claud+

| Champ | Valeur |
|---|---|
| **Nom de référence** | Claud+ |
| **Nom d'affichage** | Claud+ |
| **Description** | Accès premium à Claud CO2 |

### Abonnements

| ID produit | Référence | Nom d'affichage | Description |
|---|---|---|---|
| `fp_499_1w` | Claud+ Weekly | Claud+ | Accès illimité pendant une semaine |
| `fp_1999_1y_1w` | Claud+ Yearly | Claud+ | Accès illimité pendant un an |

### Achats à vie (non consommables)

| ID produit | Référence | Nom d'affichage | Description |
|---|---|---|---|
| `com.giusscos.footprintLifetime` | Claud CO2 Lifetime | Accès à vie | Accès illimité à vie |
| `com.giusscos.footprintFamilyLifetime` | Claud CO2 Family Lifetime | Accès à vie familial | Accès illimité à vie pour toute la famille |

---

## Screenshots

See [screenshots.md](./screenshots.md) for device sizes and capture instructions.

### Suggested caption overlays

| # | Screen | Caption |
|---|---|---|
| 1 | Résumé | Votre CO₂ en un coup d'œil |
| 2 | Activités | Chaque **choix** climatique compte |
| 3 | Trajets / Carte | Choisissez l'itinéraire le plus **vert** |
| 4 | Conseils | Des **conseils** basés sur vos données |
| 5 | Météo | **Marchez** quand c'est le bon moment |

### How each screenshot should look

1. **Hero** — Mascotte Claud en bonne santé (vert/menthe), graphique CO₂ hebdomadaire, carte météo visible.
2. **Activités** — Liste avec Voiture, Train, Marche, Consommation de bœuf, etc.
3. **Trajets** — Carte urbaine avec itinéraire ; cartes comparant marche, bus et voiture avec labels CO₂.
4. **Conseils** — Carte de conseil avec chiffres en kg CO₂ et suggestion concrète.
5. **Météo** — Carte « Super moment pour marcher ! » par beau temps.

Capture on **iPhone 16 Pro Max** (1290×2796) with **French** system language.
